# Notepad--

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.5653f27  CodeEditor.cpp  LICENSE  README.md  codeeditor.cpp  codeeditor.h  cppsyntaxhighlighter.cpp  cppsyntaxhighlighter.h  document.cpp  document.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml
assets/: count_text_files.sh  generate_random_file.sh
examples/: 1GBfile.sh  Lorem Ipsum.txt  Notepad--1.cpp  Notepad--2.cpp  Notepad--3.cpp  file-generator.sh
languages/: cppsyntaxhighlighter.cpp  languagemanager.cpp  pythonsyntaxhighlighter.cpp  pythonsyntaxhighlighter.h
src/: aboutdialog.cpp  aboutdialog.ui  codeeditor.cpp  codeeditor.h  document.cpp  document.h  fileloaderworker.cpp  fileloaderworker.h  helpers.cpp  helpers.h  main.cpp  mainwindow.bak.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  systemsearchresultdialog.cpp  systemsearchresultdialog.h  systemsearchresultdialog.ui  systemtextdelegate.cpp  systemtextdelegate.h
src/decoding/: interpret_as_adobe_standard_encoding.cpp  interpret_as_adobe_standard_encoding.h  interpret_as_big5.cpp  interpret_as_big5.h  interpret_as_big5_hkscs.cpp  interpret_as_big5_hkscs.h  interpret_as_bocu_1.cpp  interpret_as_bocu_1.h  interpret_as_cesu_8.cpp  interpret_as_cesu_8.h  interpret_as_cp851.cpp  interpret_as_cp851.h  interpret_as_dialog.cpp  interpret_as_dialog.h  interpret_as_dialog.ui  interpret_as_euc_jp.cpp  interpret_as_euc_jp.h  interpret_as_gb18030.cpp  interpret_as_gb18030.h  interpret_as_gbk.cpp  interpret_as_gbk.h  interpret_as_hp_roman8.cpp  interpret_as_hp_roman8.h  interpret_as_hz_gb_2312.cpp  interpret_as_hz_gb_2312.h  interpret_as_ibm_00858.cpp  interpret_as_ibm_00858.h  interpret_as_ibm_01140.cpp  interpret_as_ibm_01140.h  interpret_as_ibm_01141.cpp  interpret_as_ibm_01142.cpp  interpret_as_ibm_01142.h  interpret_as_ibm_01143.cpp  interpret_as_ibm_01143.h  interpret_as_ibm_01144.cpp  interpret_as_ibm_01144.h  interpret_as_ibm_01147.cpp  interpret_as_ibm_01147.h  interpret_as_ibm_01148.cpp  interpret_as_ibm_01148.h  (+126 more)
src/encoding/: convert_to_dialog.cpp  convert_to_dialog.h  convert_to_utf_7.cpp  convert_to_utf_7.h  convert_to_utf_8.cpp  convert_to_utf_8.h  interpret_as_dialog.cpp  interpret_as_ibm_01141.h  interpret_as_ibm_01145.cpp  interpret_as_ibm_01145.h  interpret_as_ibm_01146.cpp  interpret_as_ibm_01146.h  interpret_as_ibm_01149.h  interpret_as_ibm_852.cpp  interpret_as_ibm_855.cpp  interpret_as_ibm_857.cpp  interpret_as_ibm_860.cpp  interpret_as_ibm_864.cpp  interpret_as_ibm_864.h  interpret_as_ibm_865.h  interpret_as_ibm_866.h  interpret_as_ibm_871.cpp  interpret_as_iso_2022_cn.h  interpret_as_iso_2022_jp_1.cpp  interpret_as_iso_2022_jp_2.cpp  interpret_as_iso_2022_kr.h  interpret_as_iso_8859_1.cpp  interpret_as_iso_8859_1.h  interpret_as_iso_8859_14.cpp  interpret_as_iso_8859_14.h  interpret_as_iso_8859_4.h  interpret_as_iso_8859_8.cpp  interpret_as_iso_8859_9.cpp  interpret_as_koi8_u.cpp  interpret_as_koi8_u.h  interpret_as_shift_jts.h  interpret_as_tis_620.cpp  interpret_as_tis_620.h  interpret_as_tscii.cpp  interpret_as_tscii.h  (+31 more)
src/find/: find.cpp  find.h  finddialog.cpp  finddialog.h  finddialog.ui
src/indentation/: indentationdialog.cpp  indentationdialog.h  indentationdialog.ui  indentationmanager.cpp  indentationmanager.h
src/languages/: cppsyntaxhighlighter.cpp  cppsyntaxhighlighter.h  languagemanager.cpp  languagemanager.h  pythonsyntaxhighlighter.h
src/mainwindow/: fileoperations.cpp  fileoperations.h  formatting.cpp  formatting.h  helpers.cpp  helpers.h  mainwindowconfigloader.cpp  mainwindowconfigloader.h  recentfiles.cpp  recentfiles.h  session.cpp  session.h  settings.cpp  settings.h  textoperations.cpp  textoperations.h
src/replace/: replace.cpp  replace.h  replacedialog.cpp  replacedialog.h  replacedialog.ui
src/search/: filesearchworker.cpp  filesearchworker.h  search.cpp  search.h  searchcontroller.cpp  searchcontroller.h  searchdialog.cpp  searchdialog.h  searchdialog.ui  searchoptions.h
src/systemfind/: richtextdelegate.cpp  richtextdelegate.h  systemfind.cpp  systemfind.h  systemfinddialog.cpp  systemfinddialog.h  systemfinddialog.ui
src/systemreplace/: systemreplace.cpp  systemreplace.h  systemreplacedialog.cpp  systemreplacedialog.h  systemreplacedialog.ui
src/view/: movetonewview.cpp  movetonewview.h  movetootherview.cpp  movetootherview.h  openinnewwindow.cpp  openinnewwindow.h  toggletoformertab.cpp  toggletoformertab.h  wordwrap.cpp  wordwrap.h
